# PolyBase

polybase-core/: polybase-core.cabal
polybase-core/src/PolyBase/: Category.hs  Functor.hs  Indexed.hs  Monad.hs
